[tool.poetry]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = ["nastusa14 <70162550+nastusa14@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-plugin-export = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
